--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -26,6 +27,7 @@ android {
 
 dependencies {
     def koin_version = '2.1.6'
+    def room_version = "2.2.5"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -36,16 +38,24 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation "org.koin:koin-core:$koin_version"
+    //ROOM
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    // optional
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Koin for Android
     implementation "org.koin:koin-android:$koin_version"
-// Koin Android Scope features
+    implementation "org.koin:koin-core:$koin_version"
+    // Koin Android Scope features
     implementation "org.koin:koin-android-scope:$koin_version"
-// Koin Android ViewModel features
+    // Koin Android ViewModel features
     implementation "org.koin:koin-android-viewmodel:$koin_version"
-// Koin Android Experimental features
+    // Koin Android Experimental features
     implementation "org.koin:koin-android-ext:$koin_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
 
 }
