--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+/*
+    dataBinding {
+        enabled true
+    }
+    compileOptions {
+        targetCompatibility = "8"
+        sourceCompatibility = "8"
+    } */
 }
 
 dependencies {
+    /*
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    def koin_version = '2.1.6'
+    def room_version = "2.2.6"
+    def life_versions = "2.2.0"
+
+    ext.retrofit_version = '2.9.0'
+    ext.okhttp_version = '3.11.0' */
+
     def koin_version = '2.1.6'
     def room_version = "2.2.5"
 
@@ -45,8 +62,24 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'com.google.android.material:material:1.2.1'
+    /*
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc03"
+    implementation 'com.android.support:appcompat-v7:29.0.0'
+    implementation 'com.android.support:support-v4:29.0.0'
+     */
 
+    /*
+     //FRAGMENT
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-rc01'
+
+    implementation 'com.google.android.material:material:1.3.0-beta01'
+
+    testImplementation "io.mockk:mockk:1.10.2"
+
+    //To insert emoji
+    implementation "androidx.emoji:emoji-appcompat:1.2.0-alpha01"
+     */
+    implementation 'com.google.android.material:material:1.2.1'
     testImplementation "io.mockk:mockk:1.10.2"
 
     //ROOM
@@ -64,6 +97,32 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
     // Koin Android Experimental features
     implementation "org.koin:koin-android-ext:$koin_version"
+
+    /*
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+     */
+
+    /*
+        //RxJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.8'
+
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+     */
 
 
 
