--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         <activity android:name=".presentation.main.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.main.MainActivity"></activity>
+        <activity android:name=".presentation.main.AccountCreation"/>
+        <activity android:name=".presentation.main.MainActivity"/>
     </application>
 
 </manifest>
