--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,22 +34,22 @@ android {
 }
 
 dependencies {
-    /*
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    def koin_version = '2.1.6'
     def room_version = "2.2.6"
     def life_versions = "2.2.0"
 
-    ext.retrofit_version = '2.9.0'
-    ext.okhttp_version = '3.11.0' */
+    ext.okhttp_version = '3.11.0'
 
-    def koin_version = '2.1.6'
-    def room_version = "2.2.5"
+    def koin_version = "2.1.6"
+
+    def version_moshi = "1.8.0"
+    ext.retrofit_version = '2.5.0'
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -62,11 +62,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    /*
+
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc03"
     implementation 'com.android.support:appcompat-v7:29.0.0'
     implementation 'com.android.support:support-v4:29.0.0'
-     */
+
 
     /*
      //FRAGMENT
@@ -97,17 +97,25 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
     // Koin Android Experimental features
     implementation "org.koin:koin-android-ext:$koin_version"
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
-    /*
+
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-     */
+
+
+
+    //MOSHI
+    implementation "com.squareup.moshi:moshi:$version_moshi"
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
     /*
         //RxJava
@@ -123,7 +131,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
      */
-
 
 
 }
