--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".presentation.main.MainActivity"/>
         <activity android:name=".presentation.main.AccountCreation"/>
         <activity android:name=".presentation.main.SymbolList"/>
+        <activity android:name=".presentation.main.DetailSymbol"/>
     </application>
 
 
