--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icone"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".presentation.main.Splash">
@@ -19,12 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.main.MainActivity"/>
-        <activity android:name=".presentation.main.AccountCreation"/>
-        <activity android:name=".presentation.main.SymbolList"/>
-        <activity android:name=".presentation.main.DetailSymbol"/>
+        <activity android:name=".presentation.login.MainActivity" />
+        <activity android:name=".presentation.account.AccountCreation" />
+        <activity android:name=".presentation.login.recyclerview.SymbolList" />
+        <activity android:name=".presentation.main.DetailSymbol" />
     </application>
-
-
 
 </manifest>
